# Talabat-Lite

./: .gitignore  Customer_Registration.java  MainActivity.java  README.md  activity_main.xml
Specification And Diagram/: Add card activity.md  Cart Activity.md  Checkout Activity.md  Courier Registration.md  Courier profile.md  Customer Activity.md  Customer Registration.md  Customer profile.md  Delivery Activity.md  Delivery request details.md  Item Activity.md  Items Manager.md  Login.md  Merchant Activity.md  Merchant Registration.md  Merchant manager Activity.md  OrderActivity.md  OrdersActivity.md  Persistent  Login (Optional Feature).md  README.md  Registration.md  Search.md  Security Warnings.md  Server connection (MainActivity).md  Talabat Lite.canvas  Talabat-Lite.canvas  Talabat-lite.md
client/: local.properties  settings.gradle.kts
client/Networking/: client.cpp  client.hpp
client/app/: build.gradle.kts
client/app/src/main/: AndroidManifest.xml
client/app/src/main/res/drawable/: baseline_search_24.xml  circle_background.xml  customer_icon.xml  edit_text_bg.xml  (+2 more)
client/gradle/wrapper/: gradle-wrapper.properties
server/: CMakeLists.txt  Makefile  README.md  constants.hpp  server
server-client-test/: Makefile  README.md  client  client.cpp  server  server.cpp
server/include/: Courier.hpp  Customer_h.h  actions.hpp  card.hpp  constants.hpp  courier.hpp  customer.hpp  database.hpp  merchant.hpp  routes.hpp  server.hpp
server/src/: CMakeLists.txt  Customer.cbp  Customer.cpp  actions.cpp  database.cpp  main.cpp  routes.cpp  server.cpp
(+99 files in other folders)
